--- a/Portifólio_Vitória/index.html
+++ b/Portifólio_Vitória/index.html
@@ -25,9 +25,7 @@
         <div class="box-menu">
             <ul>
                 <li>Cursos</li>
-                <li>Serviços</li>
-                <li>Sobre mim</li>
-                <li>Contato</li>
+                <li>Profissional</li>
             </ul>                
         </div>
     </header>
@@ -36,7 +34,7 @@
         <div class="container">
             <div class="box-text-init">
                 <div class="text01">
-                    <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+                    <h1>Vitória Próspero de Figueiredo</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis 
                     sed reprehenderit ducimus aut placeat quisquam eius laudantium ad, qua
                     si unde. Voluptatum iste ipsum optio nulla non fugit incidunt quasi fu
@@ -70,7 +68,7 @@
                         </div>
 
                         <div class="info">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque illo dolores praesentium beatae rerum tempora quidem eos.</p>
+                            <p>Me formei em Ciências Biológicas, um curso voltado para o estudo dos seres vivos e do meio ambiente.</p>
                         </div>
                     </div>
 
@@ -84,7 +82,7 @@
                         </div>
 
                         <div class="info">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque illo dolores praesentium beatae rerum tempora quidem eos.</p>
+                            <p>Me formei em Análises Clínicas, uma área da saúde focada em exames laboratoriais para diagnóstico de doenças.</p>
                         </div>
                     </div>
                 </div>
@@ -150,6 +148,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </main>
 </body>
